# firesim

./: Cargo.toml  README.md  hello.txt
src/: add_forces_to_velocity.wgsl  add_source.wgsl  add_sources.wgsl  add_vorticity_confinement_force.wgsl  advect_scalars.wgsl  advect_velocity.wgsl  app.rs  camera.rs  compute_curl.wgsl  compute_divergence.wgsl  compute_fuel.wgsl  compute_params.rs  compute_pressure.wgsl  compute_shader.wgsl  compute_smoke.wgsl  compute_step.rs  compute_temperature.wgsl  config.rs  instance.rs  lib.rs  main.rs  ping_pong.rs  remove_source.wgsl  remove_sources.wgsl  render_shader.wgsl  shader.wgsl  state.rs  subtract_pressure_gradient.wgsl  texture.rs  vertex.rs
