[package]
name = "firesim"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
pollster = "0.4.0"
wgpu = "29.0.0"
winit = "0.30.12"
log = "0.4.29"
bytemuck = { version = "1.24", features = [ "derive" ] }
cgmath = "0.18.0"
instant = "0.1.13"
half = "2.7.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { version = "29.0", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
