[package]
name = "firesim"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.100"
pollster = "0.4.0"
wgpu = "29.0.0"
winit = "0.30.13"
log = "0.4.29"
bytemuck = { version = "1.24", features = [ "derive" ] }
cgmath = "0.18.0"
instant = "0.1.13"
half = "2.7.1"
env_logger = "0.11.10"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "29.0.0", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}
